--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 
+    <head>
+        <meta charset="UTF-8">
+        <title>Barbearia Alura</title>
+    </head>
+
+    <body>
+
+        <h1>Sobre a Barbearia star </h1>
+
+        <p>Localizada no coração da cidade a <strong>Barbearia star </strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2023, a Barbearia star já é destaque na cidade e conquista novos clientes a cada dia.</p>
+
+        <p><em> missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
+
+        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+
+    </body>
+</html>
